salesforce/force-app/main/default/objects/Segment_Definition__c/Segment_Definition__c.object-meta.xml
<CustomObject>
    <description>Defines segment criteria for portfolio-based routing. Each record represents a segment with structured JSON criteria that the SegmentEvaluationService evaluates against contact data.</description>
    <label>Segment Definition</label>
    <nameField>
        <displayFormat>SEG-{0000}</displayFormat>
        <label>Segment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>