salesforce/force-app/main/default/objects/Segment_Definition__c/fields/Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Api_Name__c</fullName>
    <description>Unique segment identifier used in code and portfolio references</description>
    <externalId>true</externalId>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>