salesforce/force-app/main/default/objects/Segment_Definition__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Segment category for grouping in the UI</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Regional</fullName><default>false</default><label>Regional</label></value>
            <value><fullName>VIP</fullName><default>false</default><label>VIP</label></value>
            <value><fullName>Event</fullName><default>false</default><label>Event</label></value>
            <value><fullName>Behavioral</fullName><default>false</default><label>Behavioral</label></value>
            <value><fullName>Lifecycle</fullName><default>false</default><label>Lifecycle</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>