salesforce/force-app/main/default/objects/Segment_Definition__c/fields/Criteria_JSON__c.field-meta.xml
<CustomField>
    <fullName>Criteria_JSON__c</fullName>
    <description>Structured JSON criteria defining segment membership rules</description>
    <label>Criteria JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>