salesforce/force-app/main/default/objects/Segment_Definition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description shown in the segment picker UI</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>