salesforce/force-app/main/default/objects/Segment_Definition__c/fields/Estimated_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Member_Count__c</fullName>
    <description>Approximate segment member count for display purposes</description>
    <label>Estimated Member Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>