salesforce/force-app/main/default/objects/Segment_Definition__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this segment is active and visible in the picker</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>